Move partial for rendering row summarizing an Expense record to expenses subdirectory

--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -51,7 +51,7 @@
         </div>
       <% end %>
       <% person_transfer_list.each do |person_transfer| %>
-        <%= render person_transfer %>
+        <%= render partial: person_transfer.transfer, locals: { person_transfer: person_transfer } %>
       <% end %>
     <% end %>
   </div>
