--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "side_panel_contents" do %>
-  <div class="card" data-controller="card">
+  <div class="card">
     <%= form_with model: @expense do |form| %>
       <header class="card-header">
         <p class="card-header-title">New Transaction</p>
