--- a/app/views/paybacks/new.html.erb
+++ b/app/views/paybacks/new.html.erb
@@ -29,23 +29,31 @@
           <% @person_transfers.each do |person_transfer| %>
             <% if person_transfer == @person_transfers.first %>
               <div class="field amount" id="payback_amount_<%= person_transfer.person_id %>">
+                <%= form.label :dollar_amount_paid, "Amount", class: "label" %>
+                <div class="control has-icons-left">
+                  <%= form.number_field :dollar_amount_paid, step: 0.01, value: person_transfer.dollar_amount, class: "input" %>
+                  <span class="icon is-small is-left">
+                    <i class="fa-solid fa-dollar-sign" aria-hidden="true"></i>
+                  </span>
+                </div>
+              </div>
             <% else %>
               <div class="field amount" style="display: none;" id="payback_amount_<%= person_transfer.person_id %>">
-            <% end %>
-              <%= form.label :dollar_amount_paid, "Amount", class: "label" %>
-              <div class="control has-icons-left">
-                <%= form.number_field :dollar_amount_paid, step: 0.01, min: 0, value: person_transfer.dollar_amount, class: "input" %>
-                <span class="icon is-small is-left">
-                  <i class="fa-solid fa-dollar-sign" aria-hidden="true"></i>
-                </span>
+                <%= form.label :dollar_amount_paid, "Amount", class: "label" %>
+                <div class="control has-icons-left">
+                  <%= form.number_field :dollar_amount_paid, step: 0.01, value: person_transfer.dollar_amount, class: "input", disabled: "disabled" %>
+                  <span class="icon is-small is-left">
+                    <i class="fa-solid fa-dollar-sign" aria-hidden="true"></i>
+                  </span>
+                </div>
               </div>
-            </div>
+            <% end %>
           <% end %>
           <%= form.bulma_form_element :date_field, :date %>
         </div>
       </div>
       <footer class="card-footer buttons has-addons">
-        <%= form.submit "Pay Back", class: "card-footer-item button is-link" %>
+        <%= form.submit "Create", class: "card-footer-item button is-link" %>
         <a href="#" class="card-footer-item" data-action="click->action-bar#enablePayback">Cancel</a>
       </footer>
     <% end %>
