Enable "Pay Back" button in action bar when editing transaction

--- a/app/views/paybacks/_payback.html.erb
+++ b/app/views/paybacks/_payback.html.erb
@@ -2,7 +2,7 @@
     id: dom_id(person_transfer),
     class: "person-transfer grid is-gap-0",
     "data-turbo-frame": "side_panel_contents",
-    "data-action": "click->action-bar#enableNewTransaction" do
+    "data-action": "click->action-bar#enableAllActions" do
 %>
     <div class="cell transfer-date is-hidden-mobile">
         <%= person_transfer.transfer.date %>
