Make paybacks stand out in index

--- a/app/views/paybacks/_payback.html.erb
+++ b/app/views/paybacks/_payback.html.erb
@@ -1,6 +1,6 @@
 <%= link_to edit_payback_path(person_transfer),
     id: dom_id(person_transfer),
-    class: "person-transfer grid is-gap-0",
+    class: "person-transfer person-payback grid is-gap-0",
     "data-turbo-frame": "side_panel_contents",
     "data-action": "click->action-bar#enableAllActions" do
 %>
