--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -79,6 +79,10 @@ body.side-frame #contents {
   flex: 1 1 auto;
 }
 
+.expenses .person-transfer.person-payback {
+  background-color: var(--bulma-border);
+}
+
 .scroller {
   height: 100%;
   margin: 0;
