Use action bar on both mobile and desktop

--- a/app/views/layouts/side_frame.html.erb
+++ b/app/views/layouts/side_frame.html.erb
@@ -1,8 +1,5 @@
 <% content_for :body_attributes, 'class=side-frame' %>
 <% content_for :content do %>
-  <div id="action-bar" class="is-hidden-touch my-0">
-      <%= yield :action_bar %>
-  </div>
   <div id="contents" class="columns is-gapless">
     <div id="side-panel" class="column is-one-quarter-desktop">
       <turbo-frame id="side_panel_contents">
@@ -19,6 +16,9 @@
     <div id="main-panel" class="column is-three-quarters-desktop">
       <%= yield %>
     </div>
+  </div>
+  <div id="action-bar" class="my-0">
+      <%= yield :action_bar %>
   </div>
 <% end %>
 <%= render template: "layouts/_main" %>
