--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@ body.side-frame #navigation-bar, body.side-frame #action-bar {
 
 body.side-frame #contents {
   flex: 1 1 auto;
+  margin-bottom: 0;
   min-height: 0;
 }
 
@@ -36,10 +37,14 @@ body.side-frame #contents {
 }
 
 #action-bar {
-  border-bottom: var(--main-border);
+  border-top: var(--main-border);
 }
 
-#action-bar .button {
+#action-bar .buttons {
+  justify-content: center;
+}
+
+#action-bar .buttons .button {
   border: none;
 }
 
@@ -162,6 +167,20 @@ body.side-frame #contents {
 }
 
 @media screen and (min-width: 769px) {
+  #action-bar {
+    border-bottom: var(--main-border);
+    border-top: none;
+    order: 1;
+  }
+
+  #action-bar .buttons {
+    justify-content: start;
+  }
+
+  #contents {
+    order: 2;
+  }
+
   .expenses {
     border-left: var(--main-border);
   }
