--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -7,16 +7,16 @@
       "data-action": "click->action-bar#disableNewTransaction",
       "data-action-bar-target": "enabledAdd" do
     %>
-      <span class="icon">
-        <i class="fa-solid fa-plus"></i>
+      <span class="icon is-medium">
+        <i class="fa-solid fa-plus fa-lg"></i>
       </span>
-      <span>New Transaction</span>
+      <span class="text">New Transaction</span>
     <% end %>
     <button class="button" data-action-bar-target="disabledAdd" style="display: none;" disabled="disabled">
-      <span class="icon">
-        <i class="fa-solid fa-plus"></i>
+      <span class="icon is-medium">
+        <i class="fa-solid fa-plus fa-lg"></i>
       </span>
-      <span>New Transaction</span>
+      <span class="text">New Transaction</span>
     </button>
     <%= link_to new_payback_path,
       class: "button",
@@ -24,16 +24,16 @@
       "data-action": "click->action-bar#disablePayback",
       "data-action-bar-target": "enabledSettle" do
     %>
-      <span class="icon">
-        <i class="fa-solid fa-file-invoice-dollar"></i>
+      <span class="icon is-medium">
+        <i class="fa-solid fa-file-invoice-dollar fa-lg"></i>
       </span>
-      <span>Pay Back</span>
+      <span class="text">Pay Back</span>
     <% end %>
     <button class="button" data-action-bar-target="disabledSettle" style="display: none;" disabled="disabled">
-      <span class="icon">
-        <i class="fa-solid fa-file-invoice-dollar"></i>
+      <span class="icon is-large">
+        <i class="fa-solid fa-file-invoice-dollar fa-lg"></i>
       </span>
-      <span>Pay Back</span>
+      <span class="text">Pay Back</span>
     </button>
   </div>
 <% end %>
