--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,6 +7,10 @@ html, body {
   overflow: hidden;
 }
 
+.container > .title {
+  margin-top: 1rem;
+}
+
 body.side-frame {
   display: flex;
   flex-direction: column;
