--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -37,27 +37,15 @@
         </div>
         <div class="navbar-menu" data-burger-target="menu">
           <div class="navbar-start">
-            <% if current_page?(controller: 'transfers') or current_page?(root_path) %>
-              <%= link_to 'Transactions', expenses_path, class: 'navbar-item is-selected' %>
-            <% else %>
-              <%= link_to 'Transactions', expenses_path, class: 'navbar-item' %>
-            <% end %>
-            <% if @current_user.present? and @current_user.is_administrator? %>
-              <% if current_page?(controller: 'people') %>
-                <%= link_to 'User Management', people_path, class: 'navbar-item is-selected' %>
-              <% else %>
-                <%= link_to 'User Management', people_path, class: 'navbar-item' %>
-              <% end %>
-            <% end %>
           </div>
           <div class="navbar-end">
-            <% if @current_user %>
+            <% if person_signed_in? %>
               <div class="navbar-item has-dropdown is-hoverable dropdown">
                 <a class="navbar-link dropdown-trigger">
-                  <%= @current_user.name %>
+                  <%= current_person.name %>
                 </a>
                 <div class="navbar-dropdown">
-                    <%= button_to 'Logout', login_path, method: 'delete', class: 'navbar-item dropdown-item' %>
+                    <%= button_to 'Logout', destroy_person_session_path, method: 'delete', class: 'navbar-item dropdown-item' %>
                 </div>
               </div>
             <% end %>
