--- a/app/views/layouts/side_frame.html.erb
+++ b/app/views/layouts/side_frame.html.erb
@@ -5,7 +5,7 @@
       <turbo-frame id="side_panel_contents">
         <% if flash.any? %>
           <% flash.each do |type, msg| %>
-            <div class="notification is-<%= type %>" data-turbo-temporary>
+            <div class="notification is-<%= bulma_notification_name(type) %>" data-turbo-temporary>
               <a href="#" class="delete"></a>
               <%= msg %>
             </div>
