--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -47,7 +47,8 @@
                   <%= current_person.name %>
                 </a>
                 <div class="navbar-dropdown">
-                    <%= button_to 'Logout', destroy_person_session_path, method: 'delete', class: 'navbar-item dropdown-item' %>
+                  <%= link_to_unless_current('Edit Profile', edit_person_registration_path, class: 'navbar-item dropdown-item') {} %>
+                  <%= button_to 'Logout', destroy_person_session_path, method: 'delete', class: 'navbar-item dropdown-item' %>
                 </div>
               </div>
             </div>
