--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,12 @@
-<h2 class="title">Change your password</h2>
+<h2 class="title">Change Your Password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password", class: "label" %>
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <div class="control">
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "input" %>
-    </div>
-  </div>
+  <%= f.bulma_form_element :password_field, :password, autofocus: true, autocomplete: "new-password",
+      help_text: @minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "" %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password", class: "label" %><br />
-    <div class="control">
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
-    </div>
-  </div>
+  <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
 
   <div class="field">
     <div class="control">
