--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,53 +1,23 @@
 <h2 class="title">Edit Profile</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email, class: "label" %>
-    <div class="control">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input" %>
-    </div>
-  </div>
+  <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email" %>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div class="field">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password, class: "label" %>
-    <div class="control">
-      <%= f.password_field :password, autocomplete: "new-password", class: "input" %>
-    </div>
-    <p class="help">
-      <% if @minimum_password_length %>
-        <%= @minimum_password_length %> characters minimum
-      <% end %>
-      (Leave blank if you don't want to change it.)
-    </p>
-  </div>
+  <%= f.bulma_form_element :password_field, :password, autocomplete: "new-password",
+      help_text: (@minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "") + "(Leave blank if you don't want to change it.)" %>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Password Confirmation", class: "label" %>
-    <div class="control">
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
-    </div>
-  </div>
+  <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
 
-  <div class="field">
-    <%= f.label :current_password, "Current Password", class: "label" %>
-    <div class="control">
-      <%= f.password_field :current_password, autocomplete: "current-password", class: "input" %>
-    </div>
-    <p class="help">
-      (We need your current password to confirm your changes.)
-    </p>
-  </div>
+  <%= f.bulma_form_element :password_field, :current_password, autocomplete: "current-password",
+      help_text: "(We need your current password to confirm your changes.)" %>
 
   <div class="field">
     <%= f.submit "Update", class: "button is-link" %>
-    <%=
-      button_to "Cancel Account",
+    <%= button_to "Cancel Account",
       registration_path(resource_name),
       data: { confirm: "Are you sure?", turbo_confirm: "Are you sure you want to cancel your account?" },
       method: :delete,
