--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,14 @@
 <h2 class="title">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= f.bulma_form_element :text_field, :name, autofocus: true %>
 
-  <%= f.bulma_form_element :text_field, :name %>
+  <%= f.bulma_form_element :email_field, :email, autocomplete: "email" %>
 
-  <div class="field">
-    <%= f.label :email, class: "label" %>
-    <div class="control">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input" %>
-    </div>
-  </div>
+  <%= f.bulma_form_element :password_field, :password, autocomplete: "new-password",
+      help_text: @minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "" %>
 
-  <div class="field">
-    <%= f.label :password, class: "label" %>
-    <div class="control">
-      <%= f.password_field :password, autocomplete: "new-password", class: "input" %>
-    </div>
-    <% if @minimum_password_length %>
-      <p class="help">(<%= @minimum_password_length %> characters minimum)</p>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, class: "label" %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
-  </div>
+  <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
 
   <div class="field">
     <div class="control">
