--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,18 +1,11 @@
-<h2 class="title">Resend unlock instructions</h2>
+<h2 class="title">Resend Unlock Instructions</h2>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email, class: "label" %>
-    <div class="control">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input" %>
-    </div>
-  </div>
+  <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email" %>
 
   <div class="field">
     <div class="control">
-      <%= f.submit "Resend unlock instructions", class: "button is-link" %>
+      <%= f.submit "Resend Unlock Instructions", class: "button is-link" %>
     </div>
   </div>
 <% end %>
