--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2 class="title">Forgot your password?</h2>
+<h2 class="title">Forgot Your Password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email" %>
