Set up Confirmable for Devise

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -5,7 +5,7 @@
 
   <div class="field">
     <div class="control">
-      <%= f.submit "Resend confirmation instructions" %>
+      <%= f.submit "Resend", class: "button is-primary" %>
     </div>
   </div>
 <% end %>
