Space out links below Devise forms

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,13 +1,15 @@
 <h2 class="title">Resend Confirmation Instructions</h2>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+<div class="block">
+  <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+    <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
 
-  <div class="field">
-    <div class="control">
-      <%= f.submit "Resend", class: "button is-primary" %>
+    <div class="field">
+      <div class="control">
+        <%= f.submit "Resend", class: "button is-link" %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
