--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,18 +1,20 @@
 <h2 class="title">Change Your Password</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <%= f.bulma_form_element :password_field, :password, autofocus: true, autocomplete: "new-password",
-      help_text: @minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "" %>
-
-  <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
-
-  <div class="field">
-    <div class="control">
-      <%= f.submit "Change my password", class: "button is-link" %>
+<div class="block">
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.hidden_field :reset_password_token %>
+  
+    <%= f.bulma_form_element :password_field, :password, autofocus: true, autocomplete: "new-password",
+        help_text: @minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "" %>
+  
+    <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
+  
+    <div class="field">
+      <div class="control">
+        <%= f.submit "Change my password", class: "button is-link" %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
