--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,13 +1,15 @@
 <h2 class="title">Forgot Your Password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email" %>
-
-  <div class="field">
-    <div class="control">
-      <%= f.submit "Send", class: "button is-link" %>
+<div class="block">
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email" %>
+  
+    <div class="field">
+      <div class="control">
+        <%= f.submit "Send", class: "button is-link" %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
