--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,28 +1,33 @@
 <h2 class="title">Edit Profile</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email" %>
+<div class="block">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.bulma_form_element :email_field, :email, autofocus: true, autocomplete: "email" %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div class="field">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div class="field">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+
+    <%= f.bulma_form_element :password_field, :password, autocomplete: "new-password",
+        help_text: (@minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "") + "(Leave blank if you don't want to change it.)" %>
+
+    <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
+
+    <%= f.bulma_form_element :password_field, :current_password, autocomplete: "current-password",
+        help_text: "(We need your current password to confirm your changes.)" %>
+
+    <div class="field">
+      <%= f.submit "Update", class: "button is-link" %>
+      <%= link_to "Back", :back, class: "button" %>
+    </div>
   <% end %>
+</div>
 
-  <%= f.bulma_form_element :password_field, :password, autocomplete: "new-password",
-      help_text: (@minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "") + "(Leave blank if you don't want to change it.)" %>
-
-  <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
-
-  <%= f.bulma_form_element :password_field, :current_password, autocomplete: "current-password",
-      help_text: "(We need your current password to confirm your changes.)" %>
-
-  <div class="field">
-    <%= f.submit "Update", class: "button is-link" %>
-    <%= button_to "Cancel Account",
-      registration_path(resource_name),
-      data: { confirm: "Are you sure?", turbo_confirm: "Are you sure you want to cancel your account?" },
-      method: :delete,
-      class: "button is-danger"
-    %>
-    <%= link_to "Back", :back, class: "button" %>
-  </div>
-<% end %>
+<div class="block">
+  <%= link_to "Cancel Account",
+    registration_path(resource_name),
+    data: { confirm: "Are you sure?", turbo_confirm: "Are you sure you want to cancel your account?" },
+    method: :delete,
+    class: "has-text-danger"
+  %>
+</div>
