--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,22 @@
 <h2 class="title">Sign Up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.bulma_form_element :text_field, :name, autofocus: true %>
+<div class="block">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.bulma_form_element :text_field, :name, autofocus: true %>
 
-  <%= f.bulma_form_element :email_field, :email, autocomplete: "email" %>
+    <%= f.bulma_form_element :email_field, :email, autocomplete: "email" %>
 
-  <%= f.bulma_form_element :password_field, :password, autocomplete: "new-password",
-      help_text: @minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "" %>
+    <%= f.bulma_form_element :password_field, :password, autocomplete: "new-password",
+        help_text: @minimum_password_length ? @minimum_password_length.to_s + " characters minimum " : "" %>
 
-  <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
+    <%= f.bulma_form_element :password_field, :password_confirmation, autocomplete: "new-password" %>
 
-  <div class="field">
-    <div class="control">
-      <%= f.submit "Sign up", class: "button is-link" %>
+    <div class="field">
+      <div class="control">
+        <%= f.submit "Sign up", class: "button is-link" %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
