--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,9 @@
-<p>Welcome <%= @email %>!</p>
+<p>Dear <%= @person.name %>,</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Welcome to the Bentley Needs Money app.<p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>Please <%= link_to 'confirm your email address', confirmation_url(@resource, confirmation_token: @token) %> in order to access your account.</p>
+
+<p>Yours truly</p>
+
+<p>The Bentley Needs Money Crew</p>
