--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,11 @@
-<p>Hello <%= @email %>!</p>
+<p>Dear <%= @person.name %>,</p>
 
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+  <p>Your email address has been changed to <%= @resource.unconfirmed_email %>.</p>
 <% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+  <p>Your email address has been changed to <%= @resource.email %>.</p>
 <% end %>
+
+<p>Yours truly,</p>
+
+<p>The Bentley Needs Money Crew</p>
