--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Dear <%= @person.name %>,</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p>Your password has been changed.</p>
+
+<p>Yours truly,</p>
+
+<p>The Bentley Needs Money Crew</p>
