--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,11 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Dear <%= @person.name %>,</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>A link to <%= link_to 'reset your password', edit_password_url(@resource, reset_password_token: @token) %> has been requested.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>If you did not make this request, please ignore this email.</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Your password will not change until you access the link above and create a new one.</p>
+
+<p>Yours truly,</p>
+
+<p>The Bentley Needs Money Crew</p>
