--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Dear <%= @person.name %>,</p>
 
 <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>You must <%= link_to 'unlock your account', unlock_url(@resource, unlock_token: @token) %> in order to sign in.</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p>Yours truly,</p>
+
+<p>The Bentley Needs Money Crew</p>
