Empty contents of side panel without making a request to server

--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="card" data-controller="card">
       <header class="card-header">
         <p class="card-header-title">Edit Transaction</p>
-        <a href="#" class="card-header-icon">
+        <a href="#" class="card-header-icon" data-action="click->clearing#clearChildren">
           <span class="icon">
             <i class="fa-solid fa-xmark fa-lg has-text-link"></i>
           </span>
