Allow notifications to be cleared on default layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
   <div class="container">
     <% if flash.any? %>
         <% flash.each do |type, msg| %>
-          <div class="notification is-<%= bulma_notification_name(type) %>" data-turbo-temporary>
+          <div class="notification is-<%= bulma_notification_name(type) %>" data-turbo-temporary data-controller="clearing">
+            <button class="delete" data-action="click->clearing#clearSelf"></button>
             <%= msg %>
           </div>
         <% end %>
