--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,8 +84,8 @@ body.side-frame #contents {
   top: 0.25rem;
 }
 
-body.side-frame .notification {
-  margin-top: 0;
+#side-panel .notification {
+  margin: 0.5rem;
 }
 
 .expenses .expenses-headings, .person-transfer.grid {
