--- a/app/views/layouts/side_panel.html.erb
+++ b/app/views/layouts/side_panel.html.erb
@@ -1,4 +1,4 @@
-<% content_for :body_attributes, 'class=side-frame' %>
+<% content_for :body_attributes, 'class=side-panel' %>
 <% content_for :content do %>
   <div id="contents" class="columns is-gapless">
     <div id="side-panel" class="column is-one-quarter-desktop" data-controller="clearing">
