--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -127,6 +127,15 @@ body.side-panel #contents {
     position: absolute;
   }
 
+  #side-panel .notification {
+    top: 0.5rem;
+    left: 0.5rem;
+    margin: 0;
+    position: fixed;
+    right: 0.5rem;
+    z-index: 100;
+  }
+
   #side-panel .card {
     display: flex;
     flex-direction: column;
