--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,7 +24,7 @@
 </div>
 
 <div class="block">
-  <%= link_to "Cancel Account",
+  <%= button_to "Cancel Account",
     registration_path(resource_name),
     data: { confirm: "Are you sure?", turbo_confirm: "Are you sure you want to cancel your account?" },
     method: :delete,
