--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -4,6 +4,6 @@
 
 <p>Please <%= link_to 'confirm your email address', confirmation_url(@resource, confirmation_token: @token) %> in order to access your account.</p>
 
-<p>Yours truly</p>
+<p>Yours truly,</p>
 
 <p>The Bentley Needs Money Crew</p>
