Remove red square images

--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -10,10 +10,8 @@
     <%= yield :head %>
 
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
     <%= favicon_link_tag asset_path("bentley-32x32.png") %>
+    <%= favicon_link_tag asset_path("bentley-153x153.png"), rel: "apple-touch-icon", type: "image/png" %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <script src="https://kit.fontawesome.com/60cf2ed680.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
