--- a/app/views/layouts/html_head.html.erb
+++ b/app/views/layouts/html_head.html.erb
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <script src="https://kit.fontawesome.com/60cf2ed680.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+    <%= javascript_include_tag "application", defer: true %>
   </head>
 
   <%= yield :body %>
