--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 
-<nav id="navigation-bar" class="navbar" role="navigation" aria-label="main navigation" data-controller="burger">
+<nav id="navigation-bar" class="navbar" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-brand">
       <%= link_to root_url, class: "navbar-item title" do %>
@@ -7,7 +7,7 @@
         Bentley Needs Money
       <% end %>
       <% if person_signed_in? %>
-        <a class="navbar-burger" role="button" aria-label="menu" aria-expanded="false" data-burger-target="burger" data-action="click->burger#toggle">
+        <a class="navbar-burger" role="button" data-target="navMenu" aria-label="menu" aria-expanded="false">
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
           <span aria-hidden="true"></span>
@@ -16,7 +16,7 @@
       <% end %>
     </div>
     <% if person_signed_in? %>
-      <div class="navbar-menu" data-burger-target="menu">
+      <div class="navbar-menu" id="navMenu">
         <div class="navbar-start">
           <%= link_to 'Expenses', transfers_path, class: "navbar-item" + (current_page?(transfers_path) ? " is-active" : "") %>
           <%= link_to 'Connections', connections_path, class: "navbar-item" + (current_page?(connections_path) ? " is-active" : "") %>
